@@ -186,7 +186,18 @@
 				<version>${version.jboss.maven.plugin}</version>
 			</plugin>
 
-
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.19.1</version>
+				<configuration>
+					<argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=512m</argLine>
+					<includes>
+						<include>${test-classes}</include>
+					</includes>
+					<skipTests>false</skipTests>
+				</configuration>
+			</plugin>
 
 		</plugins>
 
@@ -196,37 +207,7 @@
 	</build>
 
 	<profiles>
-		<profile>
-			<id>default</id>
-
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<version>${version.surefire.plugin}</version>
-						<configuration>
-<!-- 							<skip>true</skip>  -->
-						</configuration>
-					</plugin>
-					<plugin>
-						<groupId>org.codehaus.mojo</groupId>
-						<artifactId>cobertura-maven-plugin</artifactId>
-						<version>2.7</version>
-						<configuration>
-							<formats>
-								<format>xml</format>
-								<format>html</format>
-							</formats>
-						</configuration>
-
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-<!-- 		-Pintegration-test -->
+		<!-- -Pintegration-test -->
 		<profile>
 			<id>integration-test</id>
 			<dependencies>
@@ -237,7 +218,26 @@
 					<version>7.1.1.Final</version>
 				</dependency>
 			</dependencies>
+			<properties>
+				<test-classes>**/integration/**</test-classes>
+			</properties>
 		</profile>
+
+		<!-- -Punit-test -->
+		<profile>
+			<id>unit-test</id>
+
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+
+			<properties>
+				<test-classes>**/unit/**</test-classes>
+			</properties>
+
+		</profile>
+
+
 
 
 	</profiles>
